use z-index css style to ensure city view stays on top of the board canvas

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,6 +10,11 @@
 canvas {
     position: absolute;
 }
+
+#cityCanvas {
+    z-index: 0;   
+}
+
 #canvas1 {
     position: absolute;
     /*background: black;*/
@@ -17,15 +22,17 @@ canvas {
     height: 100%;*/
     top: 0;
     left: 0;
-    z-index: 4;
+    z-index: -1;
 }
 
+/*
 #ui-layer {
-    z-index: 3;
+    z-index: -2;
 }
 #game-layer {
-    z-index: 2;
+    z-index: -3;
 }
 #background-layer {
-    z-index: 1;
+    z-index: -4;
 }
+*/
